@startuml

title __SNAPSHOT's Class Diagram__\n

  namespace org.factcast.highlevel {
    namespace snapshot {
      class org.factcast.highlevel.snapshot.AggregateSnapshot {
          {static} - defaultSerializer : SnapshotSerializer
          - factId : UUID
          - serializedAggregate : byte[]
          - type : Class<A>
          + AggregateSnapshot()
          + AggregateSnapshot()
          {static} + deserialize()
          + equals()
          + factId()
          + hashCode()
          {static} + serialize()
          + serializedAggregate()
          + toString()
          + type()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace snapshot {
      interface org.factcast.highlevel.snapshot.AggregateSnapshotRepository {
          {abstract} + findLatest()
          {abstract} + put()
          {abstract} + putBlocking()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace snapshot {
      class org.factcast.highlevel.snapshot.AggregateSnapshotRepositoryImpl {
          {static} - KEY_DELIMITER : String
          {static} - KEY_PREFIX : String
          + AggregateSnapshotRepositoryImpl()
          + findLatest()
          + put()
          + putBlocking()
          # createKeyForType()
          # getSerialVersionUid()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace snapshot {
      class org.factcast.highlevel.snapshot.ProjectionSnapshot {
          - bytes : byte[]
          {static} - defaultSerializer : SnapshotSerializer
          - factId : UUID
          - type : Class<P>
          + ProjectionSnapshot()
          + ProjectionSnapshot()
          + ProjectionSnapshot()
          + bytes()
          + bytes()
          {static} + deserialize()
          + equals()
          + factId()
          + factId()
          + hashCode()
          {static} + serialize()
          + toString()
          + type()
          + type()
          # canEqual()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace snapshot {
      interface org.factcast.highlevel.snapshot.ProjectionSnapshotRepository {
          {abstract} + findLatest()
          {abstract} + put()
          {abstract} + putBlocking()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace snapshot {
      class org.factcast.highlevel.snapshot.ProjectionSnapshotRepositoryImpl {
          {static} - FAKE_UUID : UUID
          {static} - KEY_DELIMITER : String
          {static} - KEY_PREFIX : String
          + ProjectionSnapshotRepositoryImpl()
          + findLatest()
          + put()
          + putBlocking()
          # createKeyForType()
          # getSerialVersionUid()
      }
    }
  }
  

  org.factcast.highlevel.snapshot.AggregateSnapshotRepositoryImpl .up.|> org.factcast.highlevel.snapshot.AggregateSnapshotRepository
  org.factcast.highlevel.snapshot.AggregateSnapshotRepositoryImpl o-- org.factcast.core.snap.SnapshotRepository : snap
  org.factcast.highlevel.snapshot.ProjectionSnapshotRepositoryImpl .up.|> org.factcast.highlevel.snapshot.ProjectionSnapshotRepository
  org.factcast.highlevel.snapshot.ProjectionSnapshotRepositoryImpl o-- org.factcast.core.snap.SnapshotRepository : snap


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
